[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blood_env"
version = "0.1.0"
description = "Meta OpenEnv Hackathon Submission - Blood Env"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[project.scripts]
server = "server.app:main"
